samples/_failures_safe/1761073974_d6fe1b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_093063b9.c: In function ‘main’:
./samples/SAFE/__tmp_093063b9.c:163:12: error: missing terminating " character
  163 |     printf("
      |            ^
./samples/SAFE/__tmp_093063b9.c:163:5: error: expected expression at end of input
  163 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_093063b9.c:163:5: error: expected declaration or statement at end of input
